Fix unreadable dropdown text
Fixes #74

--- a/app/scss/components.scss
+++ b/app/scss/components.scss
@@ -99,6 +99,10 @@ a:hover {
 	font-size: 100%;
 }
 
+select > * {
+	color: #222;
+}
+
 input[type=text], input[type=password], textarea, select, .bulletselector {
 	text-align: left;
 }
